--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
   ],
   "homepage": "https://github.com/geolessel/react-phoenix#readme",
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-preset-env": "^1.4.0",
     "uglify-js": "^2.8.22"
   },
   "dependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-env": "^1.4.0",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-stdio": "^3.1.0"
   }
 }
