--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-phoenix",
-  "version": "0.3.0",
+  "version": "0.5.0",
   "scripts": {
     "release": "node ./node_modules/babel-cli/bin/babel src/react_phoenix.js | node ./node_modules/uglify-js/bin/uglifyjs - --mangle --compress --output priv/js/react_phoenix.js"
   },
@@ -26,7 +26,6 @@
     "babel-cli": "^6.24.1",
     "babel-preset-env": "^1.4.0",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-stdio": "^3.1.0"
+    "react-dom": "^15.5.4"
   }
 }
