--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
   ],
   "homepage": "https://github.com/geolessel/react-phoenix#readme",
   "devDependencies": {
-    "uglify-js": "^2.8.22"
+    "uglify-js": "^2.8.29"
   },
   "dependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-preset-env": "^1.4.0",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2"
   }
 }
