--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "react": "^15.6.2",
-    "react-dom": "^15.6.2"
+    "babel-preset-react": "^6.24.1"
+  },
+  "peerDependencies": {
+    "react": ">=15",
+    "react-dom": ">=15"
   }
 }
