--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-phoenix",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "scripts": {
-    "release": "node ./node_modules/.bin/babel src/react_phoenix.js | node ./node_modules/uglify-js/bin/uglifyjs - --mangle --compress --output priv/js/react_phoenix.js"
+    "release": "node ./node_modules/.bin/babel src/react_phoenix.js | node ./node_modules/uglify-js/bin/uglifyjs --mangle --compress --output priv/js/react_phoenix.js"
   },
   "repository": {
     "type": "git",
@@ -20,10 +20,10 @@
   ],
   "homepage": "https://github.com/geolessel/react-phoenix#readme",
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "uglify-js": "^2.8.29"
+    "@babel/cli": "^7.8.3",
+    "@babel/core": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "uglify-js": "^3.7.6"
   },
   "dependencies": {},
   "peerDependencies": {
