--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-phoenix",
-  "version": "1.2.0",
+  "version": "1.3.0-rc.1",
   "scripts": {
     "release": "node ./node_modules/.bin/babel src/react_phoenix.js | node ./node_modules/uglify-js/bin/uglifyjs --mangle --compress --output priv/js/react_phoenix.js"
   },
